--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/PixiJSLogo.png" />
+  <link rel="icon" type="image/jpg" href="PixiJSLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="This project is showcasing some capabilities of PixiJS and ReactJS" />
   <title>Web Multimedia Project</title>
 </head>
 
