--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/jpg" href="PixiJSLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="This project is showcasing some capabilities of PixiJS and ReactJS" />
+  <meta name="theme-color" content="#317EFB" />
+  <link rel="manifest" href="/manifest.json">
   <title>Web Multimedia Project</title>
 </head>
 
